# sofa

./: .gitignore  CMakeLists.txt
SofaAdvanced/: CMakeLists.txt  config.h.in
SofaGeneral/: CMakeLists.txt  config.h.in
SofaKernel/SofaCommon/: CMakeLists.txt
SofaKernel/SofaFramework/: SofaMacros.cmake
SofaKernel/SofaSimulation/: CMakeLists.txt
SofaMisc/: CMakeLists.txt
applications/plugins/: CMakeLists.txt
applications/plugins/Flexible/Flexible_test/: CMakeLists.txt
applications/plugins/Flexible/Flexible_test/scenes/: GreenAffinePatchTest.scn  PolarCorotationalAffinePatchTest.scn  SmallCorotationalAffinePatchTest.scn  SmallCorotationalPatchTest.scn  SvdCorotationalAffinePatchTest.scn
applications/plugins/Flexible/Flexible_test/scenes/python/: reInitMapping.py
examples/: Raptor-459-0.005.comp  Tongue-276-0.05.comp  TorusDeformLocal-168-0.02.comp
extlibs/CImg/: CImg.h
modules/SofaBoundaryCondition/: ConicalForceField.inl  PlaneForceField.inl
modules/SofaComponentAdvanced/: CMakeLists.txt  initComponentAdvanced.cpp
modules/SofaComponentGeneral/: CMakeLists.txt  initComponentGeneral.cpp
modules/SofaComponentMisc/: CMakeLists.txt  initComponentMisc.cpp
modules/SofaEulerianFluid/: Fluid2D.cpp  Fluid3D.cpp
modules/SofaExporter/: BlenderExporter.h  STLExporter.cpp  STLExporter.h  WriteState.h  WriteTopology.h
modules/SofaGeneralEngine/: AverageCoord.h  AverageCoord.inl  IndexValueMapper.h  MeshBoundaryROI.h  MeshSampler.h  MeshSplittingEngine.h  MeshSplittingEngine.inl  NormalsFromPoints.inl  SubsetTopology.inl  TextureInterpolation.inl
modules/SofaGeneralLoader/: MeshSTLLoader.cpp
modules/SofaGeneralRigid/: CMakeLists.txt  initGeneralRigid.cpp
modules/SofaGeneralVisual/: RecordedCamera.cpp
modules/SofaGraphComponent/: APIVersion.h  (+3 more)
(+407 files in other folders)
